--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=TablePlanner
+# Database configuration
+spring.datasource.url=jdbc:mariadb://localhost:3306/table_planner
+spring.datasource.username=root
+spring.datasource.password=123qwe
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+jwt.secret=6qvQGf/2ZQqj/uq6yOUCXA4YKiZDf1oF1o/X9XK8qQ8=
+spring.profiles.active=dev
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+server.forward-headers-strategy=FRAMEWORK
